CardDAV contacts without UID are not shown
One of my CardDAV address books shows as empty in Evolution after sync is completed.
An anonymized excerpt from CARDDAV_DEBUG=all
is available in this gist.
Apparently, the individual cards do not have a UID
field, which prevents Evolution from showing them.
See also the corresponding thread from the evolution-list mailing list (with many thanks to @mcrha).
Edited by Felix Eckhofer