I#245 - CardDAV contacts without UID are not shown

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/245